--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "medusa-react": "^9.0.18",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.13.0"
+    "react-router-dom": "^7.13.0",
+    "vite-plugin-pwa": "^1.2.0"
   }
 }
